<?xml version="1.0" encoding="UTF-8"?>
<!-- SPDX-FileCopyrightText: 2022 2021 2020 RTE FRANCE -->
<!-- -->
<!-- SPDX-License-Identifier: Apache-2.0 -->
<project xmlns="http://maven.apache.org/POM/4.0.0">
    <modelVersion>4.0.0</modelVersion>
    <groupId>org.lfenergy.compas</groupId>
    <artifactId>compas-sct</artifactId>
    <version>local-SNAPSHOT</version>
    <packaging>pom</packaging>
    <name>COMPAS-SCT</name>

    <distributionManagement>
        <repository>
            <id>github-packages-compas</id>
            <name>GitHub Packages</name>
            <url>https://maven.pkg.github.com/com-pas/compas-sct</url>
        </repository>
    </distributionManagement>

    <repositories>
        <repository>
            <id>github-packages-compas</id>
            <name>Github Packages CoMPAS</name>
            <url>https://maven.pkg.github.com/com-pas/*</url>
        </repository>
    </repositories>

    <properties>
        <java.version>21</java.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

        <!-- compas -->
        <compas-core.version>0.23.0</compas-core.version>
        <compas-scl-xsd.version>0.0.4</compas-scl-xsd.version>

        <!-- xml -->
        <jakarta.xml.bind-api.version>4.0.4</jakarta.xml.bind-api.version>
        <jaxb-runtime.version>4.0.6</jaxb-runtime.version>
        <jaxb2-maven-plugin.version>3.3.0</jaxb2-maven-plugin.version>

        <!-- json -->
        <jackson-databind.version>2.21.0</jackson-databind.version>

        <!-- maven -->
        <maven-surefire-plugin.version>3.5.4</maven-surefire-plugin.version>
        <maven-javadoc-plugin.version>3.12.0</maven-javadoc-plugin.version>
        <maven-source-plugin.version>3.4.0</maven-source-plugin.version>
        <maven-jar-plugin.version>3.5.0</maven-jar-plugin.version>
        <maven-compiler-plugin.version>3.14.1</maven-compiler-plugin.version>
        <maven-dependency-plugin.version>3.9.0</maven-dependency-plugin.version>

        <!-- tests -->
        <junit-version>5.14.2</junit-version>
        <assertj.version>3.27.7</assertj.version>
        <mockito.version>5.21.0</mockito.version>
        <jacoco-maven-plugin.version>0.8.14</jacoco-maven-plugin.version>

        <!-- utils -->
        <lombok.version>1.18.42</lombok.version>
        <slf4j-api.version>2.0.17</slf4j-api.version>
        <commons-lang3.version>3.20.0</commons-lang3.version>
        <commons-beanutils.version>1.11.0</commons-beanutils.version>
    </properties>

    <dependencyManagement>
        <dependencies>

            <dependency>
                <groupId>org.lfenergy.compas.core</groupId>
                <artifactId>scl-extension</artifactId>
                <version>${compas-core.version}</version>
            </dependency>
            <dependency>
                <groupId>org.lfenergy.compas.xsd</groupId>
                <artifactId>compas-scl-xsd</artifactId>
                <version>${compas-scl-xsd.version}</version>
            </dependency>
            <dependency>
                <groupId>org.glassfish.jaxb</groupId>
                <artifactId>jaxb-runtime</artifactId>
                <version>${jaxb-runtime.version}</version>
            </dependency>
            <dependency>
                <groupId>jakarta.xml.bind</groupId>
                <artifactId>jakarta.xml.bind-api</artifactId>
                <version>${jakarta.xml.bind-api.version}</version>
            </dependency>
            <dependency>
                <groupId>com.fasterxml.jackson.core</groupId>
                <artifactId>jackson-databind</artifactId>
                <version>${jackson-databind.version}</version>
            </dependency>
            <dependency>
                <groupId>org.junit.jupiter</groupId>
                <artifactId>junit-jupiter</artifactId>
                <version>${junit-version}</version>
            </dependency>
            <dependency>
                <groupId>org.assertj</groupId>
                <artifactId>assertj-core</artifactId>
                <version>${assertj.version}</version>
            </dependency>
            <dependency>
                <groupId>org.mockito</groupId>
                <artifactId>mockito-junit-jupiter</artifactId>
                <version>${mockito.version}</version>
            </dependency>
            <dependency>
                <groupId>org.projectlombok</groupId>
                <artifactId>lombok</artifactId>
                <version>${lombok.version}</version>
            </dependency>
            <dependency>
                <groupId>org.slf4j</groupId>
                <artifactId>slf4j-api</artifactId>
                <version>${slf4j-api.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.commons</groupId>
                <artifactId>commons-lang3</artifactId>
                <version>${commons-lang3.version}</version>
            </dependency>
            <dependency>
                <groupId>commons-beanutils</groupId>
                <artifactId>commons-beanutils</artifactId>
                <version>${commons-beanutils.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>
    <modules>
        <module>sct-commons</module>
        <module>sct-coverage</module>
        <module>sct-app</module>
    </modules>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>${maven-compiler-plugin.version}</version>
                    <configuration>
                        <release>${java.version}</release>
                        <source>${java.version}</source>
                        <target>${java.version}</target>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>${maven-surefire-plugin.version}</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-jar-plugin</artifactId>
                    <version>${maven-jar-plugin.version}</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-dependency-plugin</artifactId>
                    <version>${maven-dependency-plugin.version}</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-javadoc-plugin</artifactId>
                    <version>${maven-javadoc-plugin.version}</version>
                    <executions>
                        <execution>
                            <id>attach-javadocs</id>
                            <phase>package</phase>
                            <goals>
                                <goal>aggregate</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-source-plugin</artifactId>
                    <version>${maven-source-plugin.version}</version>
                    <executions>
                        <execution>
                            <id>attach-sources</id>
                            <phase>verify</phase>
                            <goals>
                                <goal>jar-no-fork</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
                <plugin>
                    <groupId>org.jacoco</groupId>
                    <artifactId>jacoco-maven-plugin</artifactId>
                    <version>${jacoco-maven-plugin.version}</version>
                </plugin>
                <plugin>
                    <groupId>org.codehaus.mojo</groupId>
                    <artifactId>jaxb2-maven-plugin</artifactId>
                    <version>${jaxb2-maven-plugin.version}</version>
                </plugin>
            </plugins>
        </pluginManagement>

        <plugins>
            <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
                <executions>
                    <execution>
                        <id>pre-unit-tests</id>
                        <goals>
                            <goal>prepare-agent</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>post-unit-test</id>
                        <phase>test</phase>
                        <goals>
                            <goal>report</goal>
                        </goals>
                        <configuration>
                            <formats>
                                <format>XML</format>
                            </formats>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
    <profiles>
        <profile>
            <id>javadoc</id>
            <properties>
                <javadoc.title>CoMPAS SCT</javadoc.title>
                <javadoc.lint>all,-html,-missing,-syntax,-reference</javadoc.lint>
            </properties>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-javadoc-plugin</artifactId>
                        <configuration>
                            <doctitle>${javadoc.title}</doctitle>
                            <doclint>${javadoc.lint}</doclint>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>
</project>
